noinst_LIBRARIES=libmisc.a
libmisc_a_SOURCES=\
	benc.c benc.h\
	btpd_if.c btpd_if.h ipcdefs.h\
	metainfo.c metainfo.h\
	hashtable.c hashtable.h\
	http_client.c http_client.h\
	iobuf.c iobuf.h\
	queue.h\
	stream.c stream.h\
	subr.c subr.h
libmisc_a_CPPFLAGS=-I$(top_srcdir)/libevent @openssl_CPPFLAGS@
